src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Unit_Price__c  *  Units_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Sold__c</fullName>
        <label>Units Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <label>Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>We_Have_What_They_Want</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNEW() ,
Product__r.Total_Inventory__c &lt;  Units_Sold__c,
 AND(
 Units_Sold__c &gt;  PRIORVALUE( Units_Sold__c ) ,
  Units_Sold__c -  PRIORVALUE( Units_Sold__c ) &gt;  Product__r.Total_Inventory__c 
) )</errorConditionFormula>
        <errorDisplayField>Units_Sold__c</errorDisplayField>
        <errorMessage>We simply don&apos;t have that many lying around.</errorMessage>
    </validationRules>
</CustomObject>